--- a/rigging.html
+++ b/rigging.html
@@ -15,6 +15,7 @@
         <option value="">???</option>
       </select>
       <br/>
+
       <input
        type="checkbox"
        id="lock_rubric"
@@ -27,6 +28,11 @@
        checked="true"
        class="narrow-toggle"
       > Add notes to rubric
+      <br/>
+
+      <input type="button" value="Save Changes" id="save_changes" >
+      <input type="button" value="Dump JSON" id="dump_json" >
+      <input type="button" value="Retore From JSON" id="restore_from_json" >
     </div>
     <div id="submission">
     </div>
